# ZcChat2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GlobalConstants.h  README.md  THIRD_PARTY_NOTICES.md  main.cpp  res.qrc
.cache/clangd/index/: ElaAppBar.h.6B768F39CBD9219D.idx  ElaApplication.h.BF2DFAA6FC3B9812.idx  ElaBreadcrumbBar.h.E4531163FC96F23F.idx  ElaComboBox.h.0A9D038A2930ADD0.idx  ElaDef.h.A89CD5DB2BDE2B6F.idx  ElaLineEdit.h.0F083E5BEA7CD41F.idx  ElaListView.h.7BFF2E64EC24BD9A.idx  ElaMenu.h.33CE96DED03D3124.idx  ElaPlainTextEdit.h.F3086915BB976DB4.idx  ElaProperty.h.979BAC301D9E54A5.idx  ElaPushButton.h.0F8B234D9B4F7DD0.idx  ElaScrollPageArea.h.E1D3F529A8F1AE86.idx  ElaSingleton.h.8624391103D8470B.idx  ElaSpinBox.h.8D4970BB1E5A0421.idx  ElaSuggestBox.h.B8B152AC74080DAA.idx  ElaText.h.1D385534825E1FA0.idx  ElaWindow.h.0B0FD9BAE5B2586C.idx  GlobalConstants.h.0EE504EEAFB1D944.idx  ZcAiLib_global.h.58310C5DBFE138E0.idx  ZcJsonLib_global.h.6220781DDBB50E93.idx  ZcWidgetTools_global.h.D1595AAD3761ECBD.idx  aiprovider.h.F41A0BE4F1DA20A2.idx  customscrollbinder.cpp.CF11F733478784A1.idx  customscrollbinder.h.A8DF5BAB5887447C.idx  dialog.cpp.8367501F954CE5CD.idx  dialog.h.DFDA6AD0C47BE4FF.idx  draghelper.cpp.4185A9806FAA462D.idx  draghelper.h.FACF52478B2DC3D7.idx  main.cpp.26329E0517F304DC.idx  setting.cpp.DD7E73A92413EE9F.idx  setting.h.E74358B8C7094BB2.idx  settingchild_char.cpp.27A5E73A83595D65.idx  settingchild_char.h.D0D4FF8D6B5AF97F.idx  settingchild_llm.cpp.84B81103F8E4DFA8.idx  settingchild_llm.h.AC2C1FA98DCF993F.idx  settingchild_vits.cpp.3DF91BB1A04249EC.idx  settingchild_vits.h.CB63AAC957B2DEF7.idx  tachie.cpp.360420C66D461117.idx  tachie.h.DD4A9FA3DE52F78B.idx  zcjsonlib.h.4DF6DA07EBFB470E.idx  (+1 more)
.github/workflows/: manual-win-linux-release.yml  qt6-cmake-win-linux.yml
cmake/: MacOSXBundleInfo.plist.in  SpeechDependencies.cmake
installer/: ActionTest.iss  ZcChat2.iss  ZcChat2.iss.in
pet/: dialog.cpp  dialog.h  dialog.ui
res/default_config/ZcChat2/Character/Assets/test/: config.json
res/default_config/ZcChat2/Plugin/Anime/: sample.bounce.json
tests/: test_speech.cpp
tests/fixtures/: voice_sample.pcm.qz.b64
utils/: AnimePlugin.cpp  AnimePlugin.h  AnimePluginManager.cpp  AnimePluginManager.h  CustomScrollBinder.cpp  DragHelper.cpp  DragHelper.h  createwin.cpp  createwin.h  customscrollbinder.cpp  customscrollbinder.h  draghelper.cpp  log.cpp  log.h
utils/speech/: Pcm16kConverter.cpp  Pcm16kConverter.h  SileroVadEngine.cpp  SileroVadEngine.h  SpeechInteractionController.cpp  SpeechInteractionController.h  SpeechSessionPolicy.cpp  SpeechSessionPolicy.h  VadSegmenter.cpp  VadSegmenter.h
windows/dialog/: dialog.cpp  dialog.h  dialog.ui
windows/dialog/history/: history.cpp  history.h  historychild.cpp  historychild.h  historychild.ui
windows/pet/: dialog.cpp  dialog.h  dialog.ui
windows/setting/: setting.cpp  setting.h
windows/setting/child/: settingchild_about.cpp  settingchild_about.ui  settingchild_char.cpp  settingchild_char.h  settingchild_char.ui  settingchild_llm.cpp  settingchild_llm.h  settingchild_llm.ui  settingchild_plugin.cpp  settingchild_plugin.h  settingchild_plugin.ui  settingchild_speech.cpp  settingchild_speech.h  settingchild_speech.ui  settingchild_vits.cpp  settingchild_vits.h  settingchild_vits.ui
windows/tachie/: tachie.cpp  tachie.h  tachie.ui
